test/expected/explain_o_plus_kel.out
explain int operator+(S, ...)
                         ^
26: error: operator "+" can not have a variadic parameter
